--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "description": "React UI Component library inspired by Apple's Design Philosophy",
   "main": "index.js",
+  "husky": {
+    "hooks": {
+      "precommit": "NODE_ENV=production lint-staged"
+    }
+  },
   "scripts": {
     "dev": "webpack --mode development --env.dist=false",
     "dev:dist": "webpack --mode development",
     "build": "webpack --mode production",
     "lint": "eslint lib/**; exit 0",
     "lint:watch": "esw -w lib/**",
+    "lint-staged": {
+      "*.{js,jsx}": [
+        "pretty-quick --staged",
+        "eslint src/ --fix",
+        "git add"
+      ]
+    },
     "prepublish": "npm run build",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
@@ -44,11 +56,18 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.1",
     "eslint": "^5.9.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "eslint-watch": "^4.0.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "husky": "^1.2.0",
+    "lint-staged": "^8.1.0",
+    "prettier": "^1.15.2",
+    "pretty-quick": "^1.8.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
