--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
       ]
     },
     "prepublish": "npm run build",
-    "storybook": "start-storybook -p 9001 -c .storybook"
+    "storybook": "start-storybook -p 9001 -c src/.storybook"
   },
   "repository": {
     "type": "git",
@@ -68,6 +68,8 @@
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.2",
     "pretty-quick": "^1.8.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "style-loader": "^0.23.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
