--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     }
   },
   "scripts": {
+    "build-css": "node-sass-chokidar src/components/ -o src/components/",
     "dev": "webpack --mode development --env.dist=false",
     "dev:dist": "webpack --mode development",
     "build": "webpack --mode production",
@@ -22,7 +23,9 @@
       ]
     },
     "prepublish": "npm run build",
-    "storybook": "start-storybook -p 9001 -c src/.storybook"
+    "start": "npm-run-all -p watch-css storybook",
+    "storybook": "start-storybook -p 9001 -c src/.storybook",
+    "watch-css": "npm run build-css && node-sass-chokidar src/components/ -o src/components/ --watch --recursive"
   },
   "repository": {
     "type": "git",
@@ -66,6 +69,8 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "husky": "^1.2.0",
     "lint-staged": "^8.1.0",
+    "node-sass-chokidar": "^1.3.4",
+    "npm-run-all": "^4.1.3",
     "prettier": "^1.15.2",
     "pretty-quick": "^1.8.0",
     "react": "^16.6.3",
