--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
       ]
     },
     "prepublish": "npm run build",
+    "prettier": "prettier src/**/*.js src/components/**/*.js --write",
     "start": "npm-run-all -p watch-css storybook",
     "storybook": "start-storybook -p 9001 -c src/.storybook",
     "watch-css": "npm run build-css && node-sass-chokidar src/components/ -o src/components/ --watch --recursive"
