--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ node_js:
 cache:
   directories:
     - node_modules
-script:
+before_script:
   - npm run build-css
+script:
   - npm run lint
   - npm run build
