--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ node_js:
 cache:
   directories:
     - node_modules
-before_script:
-  - npm run build-css
 script:
   - npm run lint
+  - npm run build
